--- a/Estilo.css
+++ b/Estilo.css
@@ -84,7 +84,7 @@
     content: "";
     height: calc(100px * 0.15);
     width: calc(100px * 0.9);
-    background: #fff;
+    background: #368ef4;
     position: absolute;
   }
   
@@ -106,7 +106,7 @@
     content: "";
     height: calc(100px * 0.9);
     width: calc(100px * 0.9);
-    background: #fff;
+    background: #a55050;
     position: absolute;
     border-radius: 50%;
   }
